Fix header layout issues, make collab directory view buttons fullwidth again

--- a/src/components/Header/HeaderTabs.module.css
+++ b/src/components/Header/HeaderTabs.module.css
@@ -6,7 +6,7 @@
 }
 
 .mainSection {
-  padding-top: var(--mantine-spacing-sm);
+  padding-top: 0;
 }
 
 .user {
